# cloud_run_http_server_terraform_example

./: .gcloudignore  Dockerfile  LICENSE  Pipfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
terraform/: .gitignore  .terraform.lock.hcl  main.tf
terraform/module/api/: main.tf
terraform/module/cloudbuild/: main.tf
terraform/module/cloudrun/: main.tf
