[tool.poetry]
name = "cloud-run-http-server-example"
version = "0.1.0"
description = ""
authors = ["Niccari <latieos93@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[tool.taskipy.tasks]
dev = { cmd = "uvicorn main:app --host 0.0.0.0 --port 8080 --reload", help = "run server locally" }
lint = { cmd = "flake8 --show-source .", help = "lint codes" }
format = { cmd = "autopep8 -ivr .", help = "format codes" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

